<resources>
    <string name="app_name">Darkdialer</string>
    <string name="action_settings">Settings</string>
        <string name="X">x</string>
        <string name="hint">Enter the Number</string>
        <string name="one">1</string>
        <string name="two">2</string>
        <string name="three">3</string>
        <string name="four">4</string>
        <string name="five">5</string>
        <string name="six">6</string>
        <string name="seven">7</string>
        <string name="eight">8</string>
        <string name="nine">9</string>
        <string name="zero">0</string>
        <string name="star">*</string>
        <string name="hash">#</string>
        <string name="dial">Dial</string>
        <string name="plus">+</string>
    <string name="rate">Rate Us</string>

</resources>
